test/langtools/tools/javac/valhalla/primitive-classes/CheckExtends.out
CheckExtends.java:10:18: compiler.err.concrete.supertype.for.value.class: CheckExtends.NestedPrimitive, CheckExtends.NestedConcrete
1 error
